traefik-setups/traefik-noor/test-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx # Name of the deployment
  namespace: traefik-example # Name of the namespace
  labels:
    app: nginx # Name of your application
spec:
  selector:
    matchLabels:
      app: nginx # Name of your application
  replicas: 1 # Number of replicas
  template:
    metadata:
      labels:
        app: nginx # Name of your application
    spec:
      containers:
        # Containers are the individual pieces of your application that you want
        # to run.
        - name: nginx # Name of the container
          image: nginx:latest # The image you want to run
          ports:
            # Ports are the ports that your application uses.
            - containerPort: 80 # The port that your application uses
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: traefik-example
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - name: http
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: traefik-example
  annotations:
    # (Optional): Annotations for the Ingress Controller
    # ---
    # General:
    # kubernetes.io/ingress.class: traefik
    #
    # TLS configuration:
    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    #
    # Middleware:
    # traefik.ingress.kubernetes.io/router.middlewares:your-middleware@kubernetescrd
spec:
  rules:
    - host: "traefik-example.roonaldo.org" # Your hostname
      http:
        paths:
          # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80 # The name of the service


  # tls:
  #   - hosts:
  #       - roonaldo.org # Your hostname
  #     secretName: nginx-test # Your TLS Secret
